# worker.cicd

./: .gitignore  .prettierrc  Dockerfile  Dockerfile-container  Dockerfile-debian  Dockerfile-git-ubuntu  Dockerfile-java  Dockerfile-java-ubuntu  Dockerfile-kaniko  Dockerfile-node  Dockerfile-node-python-slim  Dockerfile-node-ubuntu  Dockerfile-python-ubuntu  Dockerfile-test  README.md  alpine-mirrors  package-lock.json  package.json  run.sh  test.sh
cicd/test/: security-java.sh
commands/: build.js  deploy.js  git.js  test.js
props/: task.input.properties  workflow.input.properties
scripts/common/: git-clone.sh  initialize-dependencies-helm.sh  initialize-dependencies-java-tool.sh  initialize-dependencies-java.sh  initialize-dependencies-node.sh  initialize-dependencies-python.sh  initialize-dependencies-wicked.sh  initialize.sh
scripts/deploy/: containerregistry-tar.sh  containerregistry.sh  helm-chart.sh  helm-upgrade.sh  helm.sh  initialize-dependencies-kube.sh  initialize-dependencies.sh  kube.yaml  kubernetes.sh
scripts/test/: initialize-dependencies-node.sh  initialize-dependencies-static-python.sh  initialize-dependencies-whitesource.sh  lint-helm.sh  security-java.sh  security-java.xml  security-node.sh  security-node.xml  selenium-custom.sh  selenium-native.sh  static-docker.sh  static-java.sh  static-node.sh  static-python.sh  unit-java-maven-jacoco.xml  unit-java-maven-sonar.xml  (+7 more)
tasks/: Dockerfile  README.md  _discovery.py  _utils.py  core.py  cos.py  docker.py  env.py  git.py  k8s.py  osx.py  pyproject.toml  python.py  setup.py  ssh.py  tmux.py
